--- a/Notebooks/Preprocessing.ipynb
+++ b/Notebooks/Preprocessing.ipynb
@@ -2,20 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "# TP2: Machine Learning"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Imports"
    ]
@@ -24,9 +18,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -37,10 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Data loading"
    ]
@@ -49,9 +38,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -62,10 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "## Basic data analysis"
    ]
@@ -73,20 +57,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "stationDF.head()"
+    "stationDF"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print \"stationDF.shape: \", stationDF.shape"
@@ -96,18 +76,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "distancesDF = pd.DataFrame(columns=[\"station1\", \"station2\", \"distance\"])"
+    "distancesDF = pd.DataFrame(columns=[\"start_station_id\", \"end_station_id\", \"distance\"])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -119,28 +99,40 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "for station, lat, lon in zip(stationDF.id, stationDF.lat, stationDF.long):\n",
     "    for station2, lat2, lon2 in zip(stationDF.id, stationDF.lat, stationDF.long):\n",
     "        distancesDF = distancesDF.append({\n",
-    "            \"station1\": station,\n",
-    "            \"station2\": station2,\n",
+    "            \"start_station_id\": station,\n",
+    "            \"end_station_id\": station2,\n",
     "            \"distance\": scipy.spatial.distance.cityblock([lat, lon], [lat2, lon2])\n",
-    "        }, ignore_index=True)"
+    "        }, ignore_index=True)\n",
+    "        \n",
+    "\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "distancesDF.head()"
+    "distancesDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distancesDF['start_station_id'] = distancesDF.start_station_id.astype(int)\n",
+    "distancesDF['end_station_id'] = distancesDF.end_station_id.astype(int)\n",
+    "distancesDF"
    ]
   },
   {
@@ -154,9 +146,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -167,22 +157,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "trainingSet.size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -191,10 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### convert to date to datetime"
    ]
@@ -203,9 +175,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -218,9 +188,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -233,9 +201,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -246,9 +212,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -273,9 +237,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -300,9 +262,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -313,9 +273,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -326,9 +284,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -361,7 +317,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -372,9 +328,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -399,42 +353,397 @@
     "                           'end_station_id', \n",
     "                           'bike_id',\n",
     "                           'subscription_type',\n",
-    "                           'zip_code']]"
+    "                           'zip_code']]\n",
+    "                  "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "testingSet.head()"
+    "trainingSet.dtypes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "trainingSet.head()"
+    "testingSet.dtypes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "trainingSet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "testingSet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ///////////////////////////////////////////////////////////////////////////////////////////////\n",
+    "# ///////////////////////////////////////////////////////////////////////////////////////////////\n",
+    "# ///////////////////////////////////////////////////////////////////////////////////////////////\n",
+    "# CORRER A PARTIR DE ACA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet = pd.read_csv('../CSVs/improved_trip_train.csv')\n",
+    "testingSet = pd.read_csv('../CSVs/improved_trip_test.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Distancia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "distancesDF = pd.DataFrame(columns=[\"start_station_id\", \"end_station_id\", \"distance\"])\n",
+    "for station, lat, lon in zip(stationDF.id, stationDF.lat, stationDF.long):\n",
+    "    for station2, lat2, lon2 in zip(stationDF.id, stationDF.lat, stationDF.long):\n",
+    "        distancesDF = distancesDF.append({\n",
+    "            \"start_station_id\": station,\n",
+    "            \"end_station_id\": station2,\n",
+    "            \"distance\": scipy.spatial.distance.cityblock([lat, lon], [lat2, lon2])\n",
+    "        }, ignore_index=True)\n",
+    "        \n",
+    "distancesDF['start_station_id'] = distancesDF.start_station_id.astype(int)\n",
+    "distancesDF['end_station_id'] = distancesDF.end_station_id.astype(int)\n",
+    "distancesDF    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet = pd.merge(trainingSet,distancesDF,on =['start_station_id','end_station_id'],how = 'inner')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "testingSet = pd.merge(testingSet,distancesDF,on =['start_station_id','end_station_id'],how = 'inner')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Historico"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "trainingShort = trainingSet.loc[:,['id','duration','start_station_name','start_station_id','end_station_name','end_station_id']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "listaStart = []\n",
+    "listaEnd = []\n",
+    "for i in list(trainingShort.start_station_id.values):\n",
+    "    if i not in listaStart:\n",
+    "        listaStart.append(i)\n",
+    "for i in list(trainingShort.end_station_id.values):\n",
+    "    if i not in listaEnd:\n",
+    "        listaEnd.append(i)\n",
+    "listaHistorico = []\n",
+    "for i in listaStart:\n",
+    "    for j in listaEnd:\n",
+    "        df = trainingShort[(trainingShort['start_station_id'] == i) & (trainingShort['end_station_id'] == j)]\n",
+    "        historico = df.duration.mean()\n",
+    "        if (not(math.isnan(historico))):\n",
+    "            listaHistorico.append([i,j,historico])\n",
+    "        \n",
+    "listaHistorico\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "starStationId = []\n",
+    "endStationId = []\n",
+    "historical = []\n",
+    "for x in listaHistorico:\n",
+    "    starStationId.append(x[0])\n",
+    "    endStationId.append(x[1])\n",
+    "    historical.append(x[2])\n",
+    "\n",
+    "data = {\n",
+    "    'start_station_id' : starStationId,\n",
+    "    'end_station_id' : endStationId,\n",
+    "    'historical' : historical,\n",
+    "}\n",
+    "\n",
+    "dfData = pd.DataFrame(data,columns = ['start_station_id','end_station_id','historical'])\n",
+    "dfData"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainingShort = pd.merge(trainingShort,dfData,on =['start_station_id','end_station_id'],how = 'inner')\n",
+    "trainingShort = trainingShort [['id', 'historical']]\n",
+    "trainingSet = pd.merge(trainingSet,trainingShort,on =['id'],how = 'inner')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainingSet['historical'] = trainingSet.historical.astype(int)\n",
+    "trainingSet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Agrego datos de TP1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainingSet.loc [:,['id','duration','start_station_id', 'end_station_id','start_time', 'end_time','historical','distance' ]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    " dfTrip = pd.read_csv('../CSVs/trip.csv')\n",
+    "# dfTrip = dfTrip.loc[:,['id','duration']]\n",
+    "# dfTrip = dfTrip.rename(columns={'duration':'durationPosta'})\n",
+    "# dfScore = pd.merge(testingSet,dfTrip,on =['id'],how = 'inner')\n",
+    "# dfScore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfTrip.corr()['duration']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfTrip.loc[dfTrip.id == 192809,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainingSet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# GLORIOSO DF DEL TP1\n",
+    "#(0 = Monday, 1 = Tuesday...)\n",
+    "dfSF_Bay = pd.read_csv('../CSVs/dfSF_Bay.csv')\n",
+    "dfSF_Bay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfSF_Bay.corr()['viajes']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfSF_Bay.loc[dfSF_Bay.month == 2,:].loc[dfSF_Bay.year == 2014,:].loc[dfSF_Bay.weekday == 5,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfSF_Bay.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Elijo las mejores variables en funcion del TP1\n",
+    "dfSF_Bay = dfSF_Bay.loc [:,['viajes','max_temperature_c','min_temperature_c','max_humidity','max_sea_level_pressure_cm','precipitation_cm','Fog','Normal','Rain','business_day','holiday','year','month','weekday','date']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfSF_Bay.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainingSet['year'] = pd.to_datetime(trainingSet['start_date']).dt.year\n",
+    "trainingSet['month'] = pd.to_datetime(trainingSet['start_date']).dt.month\n",
+    "trainingSet['weekday'] = pd.to_datetime(trainingSet['start_date']).dt.weekday\n",
+    "trainingSet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainingSet = pd.merge(trainingSet,dfSF_Bay,left_on ='start_date',right_on='date',how = 'inner')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainingSet.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainingSet.drop(['year_x','month_x','weekday_x'],1,inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainingSet.drop(['date'],1,inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet = trainingSet.rename(columns={'year_y':'year','month_y':'month','weekday_y': 'weekday'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "trainingSet.dtypes"
@@ -451,9 +760,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -464,9 +771,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -490,7 +795,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
