--- a/Notebooks/Preprocessing.ipynb
+++ b/Notebooks/Preprocessing.ipynb
@@ -75,7 +75,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -88,7 +88,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -114,7 +114,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -150,7 +150,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -163,7 +163,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -188,7 +188,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -201,7 +201,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -254,7 +254,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -321,7 +321,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet['start_year'] = trainingSet.start_date.dt.year\n",
+    "trainingSet['start_month'] = trainingSet.start_date.dt.month\n",
+    "trainingSet['start_day'] = trainingSet.start_date.dt.day\n",
+    "\n",
+    "trainingSet['end_year'] = trainingSet.end_date.dt.year\n",
+    "trainingSet['end_month'] = trainingSet.end_date.dt.month\n",
+    "trainingSet['end_day'] = trainingSet.end_date.dt.day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -334,7 +351,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -382,7 +399,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -430,7 +447,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -443,7 +460,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -456,7 +473,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
@@ -469,13 +486,49 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [],
    "source": [
     "testingSet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## Save processed data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet.to_csv('../CSVs/improved_trip_train.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "testingSet.to_csv('../CSVs/improved_trip_test.csv', index=False)"
    ]
   },
   {
@@ -1037,20 +1090,6 @@
    "metadata": {
     "collapsed": false,
     "deletable": true,
-    "editable": true,
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "trainingSet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
     "editable": true
    },
    "outputs": [],
@@ -1068,14 +1107,49 @@
    },
    "outputs": [],
    "source": [
-    "listaStartName = []\n",
-    "listaEndName = []\n",
-    "for i in list(trainingSet.start_station_name.values):\n",
-    "    if i not in listaStartName:\n",
-    "        listaStartName.append(i)\n",
-    "for i in list(trainingSet.end_station_name.values):\n",
-    "    if i not in listaEndName:\n",
-    "        listaEndName.append(i)"
+    "def crearLista (listadoCompleto):\n",
+    "    listaReducida = []\n",
+    "    for i in listadoCompleto:\n",
+    "        if i not in listaReducida:\n",
+    "            listaReducida.append(i)\n",
+    "    listaReducida.sort()\n",
+    "    return listaReducida"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "def discretizar(columna,listaReducida,nombre):\n",
+    "    v = list(range(len(columna)))\n",
+    "    listaCompleta = list(columna)\n",
+    "    for i in listaReducida:\n",
+    "        for j in range(len(listaCompleta)):\n",
+    "            if(listaCompleta[j] == i):\n",
+    "                v[j] = 1\n",
+    "            else:\n",
+    "                v[j] = 0\n",
+    "        trainingSet[nombre+str(i)] = v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "listaStartName = crearLista(trainingSet.start_station_name)\n",
+    "listaEndName = crearLista(trainingSet.end_station_name)"
    ]
   },
   {
@@ -1088,41 +1162,7 @@
    },
    "outputs": [],
    "source": [
-    "len(listaStartName)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "len(listaEndName)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "v = list(range(len(trainingSet.id)))\n",
-    "n = list(trainingSet.start_station_name)\n",
-    "for i in listaStartName:\n",
-    "    for j in range(len(v)):\n",
-    "        if (n[j] == i):\n",
-    "            v[j] = 1\n",
-    "        else:\n",
-    "            v[j] = 0\n",
-    "    trainingSet['start '+i] = v"
+    "discretizar(trainingSet.start_station_name,listaStartName,'start ')"
    ]
   },
   {
@@ -1161,15 +1201,18 @@
    },
    "outputs": [],
    "source": [
-    "v = list(range(len(trainingSet.id)))\n",
-    "n = list(trainingSet.end_station_name)\n",
-    "for i in listaEndName:\n",
-    "    for j in range(len(v)):\n",
-    "        if (n[j] == i):\n",
-    "            v[j] = 1\n",
-    "        else:\n",
-    "            v[j] = 0\n",
-    "    trainingSet['end '+i] = v"
+    "discretizar(trainingSet.end_station_name,listaEndName,'end ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "listaStartWeekDay = crearLista(trainingSet.start_dayOfWeek)"
    ]
   },
   {
@@ -1182,47 +1225,36 @@
    },
    "outputs": [],
    "source": [
-    "v = list(range(len(trainingSet.id)))\n",
-    "days = list(range(7))\n",
-    "dfStartDays = list(trainingSet.start_dayOfWeek)\n",
-    "for i in days:\n",
-    "    for j in range(len(dfStartDays)):\n",
-    "        if(dfStartDays[j] == i):\n",
-    "            v[j] = 1\n",
-    "        else:\n",
-    "            v[j] = 0\n",
-    "    trainingSet['start_dayOfWeek_id'+str(i)] = v"
+    "discretizar(trainingSet.start_dayOfWeek,listaStartWeekDay,'start_dayOfWeek_id')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "v = list(range(len(trainingSet.id)))\n",
-    "days = list(range(7))\n",
-    "dfEndDays = list(trainingSet.end_dayOfWeek)\n",
-    "for i in days:\n",
-    "    for j in range(len(dfEndDays)):\n",
-    "        if(dfEndDays[j] == i):\n",
-    "            v[j] = 1\n",
-    "        else:\n",
-    "            v[j] = 0\n",
-    "    trainingSet['end_dayOfWeek_id'+str(i)] = v"
+    "listaEndWeekDay = crearLista(trainingSet.end_dayOfWeek)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "discretizar(trainingSet.end_dayOfWeek,listaEndWeekDay,'end_dayOfWeek_id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -1239,10 +1271,7 @@
    },
    "outputs": [],
    "source": [
-    "listaSubscriptionType = []\n",
-    "for i in list(trainingSet.subscription_type):\n",
-    "    if i not in listaSubscriptionType:\n",
-    "        listaSubscriptionType.append(i)           "
+    "listaSubscriptionType = crearLista(trainingSet.subscription_type)"
    ]
   },
   {
@@ -1255,28 +1284,7 @@
    },
    "outputs": [],
    "source": [
-    "len(listaSubscriptionType)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "v = list(range(len(trainingSet.id)))\n",
-    "subscriptionTypes = list(trainingSet.subscription_type)\n",
-    "for i in listaSubscriptionType:\n",
-    "    for j in range(len(subscriptionTypes)):\n",
-    "        if(subscriptionTypes[j] == i):\n",
-    "            v[j] = 1\n",
-    "        else:\n",
-    "            v[j] = 0\n",
-    "    trainingSet['subscription_type_'+i] = v"
+    "discretizar(trainingSet.subscription_type,listaSubscriptionType,'subscription_type_')"
    ]
   },
   {
@@ -1306,6 +1314,324 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "listaStartYear = crearLista(trainingSet.start_year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "discretizar(trainingSet.start_year,listaStartYear,'start_year_')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "listaEndYear = crearLista(trainingSet.end_year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "discretizar(trainingSet.end_year,listaEndYear,'end_year_')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "listaStartMonth = crearLista(trainingSet.start_month)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "discretizar(trainingSet.start_month,listaStartMonth,'start_month_')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "listaEndMonth = crearLista(trainingSet.end_month)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "discretizar(trainingSet.end_month,listaEndMonth,'end_month_')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "listaStartDay = crearLista(trainingSet.start_day)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "discretizar(trainingSet.start_day,listaStartDay,'start_day_')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "listaEndDay = crearLista(trainingSet.end_day)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "discretizar(trainingSet.end_day,listaEndDay,'end_day_')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "listaStartQuarter = crearLista(trainingSet.start_quarter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "discretizar(trainingSet.start_quarter,listaStartQuarter,'start_quarter_')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "listaEndQuarter = crearLista(trainingSet.end_quarter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "discretizar(trainingSet.end_quarter,listaEndQuarter,'end_quarter_')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "listaStartHour = crearLista(trainingSet.start_hour)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "discretizar(trainingSet.start_hour,listaStartHour,'start_hour_')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "listaEndHour = crearLista(trainingSet.end_hour)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "discretizar(trainingSet.end_hour,listaEndHour,'end_hour')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet.columns.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#A veces tarda a veces no\n",
+    "trainingSet = trainingSet.drop(labels = ['start_date','start_dayOfWeek','start_quarter','start_time','start_station_name','end_date',\n",
+    "                        'end_dayOfWeek','end_quarter','end_time','end_station_name','subscription_type','year','month',\n",
+    "                         'weekday','start_hour','end_hour'],axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet.columns.values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## Save processed data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "trainingSet.to_csv('../CSVs/improved_trip_train.csv', index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false,
@@ -1314,6 +1640,20 @@
    },
    "source": [
     "## Normalizacion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "listaStartDay.sort()\n",
+    "listaStartDay"
    ]
   },
   {
@@ -1351,29 +1691,6 @@
    "outputs": [],
    "source": [
     "trainingSet.loc[:,['duration','max_temperature_c','min_temperature_c','max_humidity','max_sea_level_pressure_cm','precipitation_cm']]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "## Save processed data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "trainingSet.to_csv('../CSVs/improved_trip_train.csv', index=False)"
    ]
   }
  ],
